[gd_scene load_steps=4 format=3 uid="uid://0sd7ary5l51y"]

[ext_resource type="Script" path="res://scenes/game_over/game_over.gd" id="1_ntupq"]
[ext_resource type="LabelSettings" uid="uid://ch8rgeo3vvntx" path="res://assets/lg_red_48.tres" id="1_r7vfr"]
[ext_resource type="AudioStream" uid="uid://b7yfg8ci454j6" path="res://assets/audio/game_over.wav" id="3_dc8cx"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ntupq")

[node name="GoOverLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "GAME OVER"
label_settings = ExtResource("1_r7vfr")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpaceLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "PRESS SPACE"
label_settings = ExtResource("1_r7vfr")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="GameOverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_dc8cx")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
